--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/jsdom": "^11.0.4",
     "jsdom": "^11.10.0",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "turndown": "^4.0.2"
   }
 }
